tooling/nargo_cli/tests/snapshots/execute__tests__traits_in_crates_1_force_brillig_true_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "15643062008726024849",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "field"
        },
        "visibility": "public"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/7VUwQ6CMAztZEQn0YNGL/oRQ1A4etAPWSR8B59uiJ2UMk50TUhLWl5fXzcU/Ezh05tGv4Kp+ZonervMckEsG5OnisTzT5TGCuaFv6I3MF5Sn08EBzYBTlL4tS0fJjCfIP/CEMwI+DePr+Pg2zXivLoxPrC+OxhfXvqNz9GL/MbcBvM+3mNsGF6MvVNO0rodA/x9rwxnPbNZE6KPEA/H9wQzuoZyKUzP1orlfO1pZhZpXQ8El/PPYPgf6U6+f1Vb6/sm3aAD1Q9Y/5TVX/B9G5hDL+DZVi5vC9e6u2ua8uO4Tr3R8/cFCaTsDnEHAAA=",
  "debug_symbols": "tZHBCoMwEET/Zc85JBGr9VdKkairBEIiMRaK+O/dlLaEtpccvCw7y7zZw2wwYLdOrbajW6C5bGBcr4J2ltS2M+i8NkZPbXoGHocon/5lVjbKJSgfoBG8YIB2oE1w4kdtEJqS1l+rqN/WIrGK/cpAnI4Mr/6Gy/JDFGl4JOps4pxLSJ5H7KRuymvVGXyVNa62T7oL9xm/apy963FYPcZCky7jbymZrCiWoh8=",
  "file_map": {
    "50": {
      "source": "use crate1::MyTrait;\n\nfn main(x: Field, y: pub Field) {\n    let mut V = crate2::MyStruct { Q: x };\n    V.Add10();\n    assert(V.Q == y);\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/traits_in_crates_1/src/main.nr"
    },
    "51": {
      "source": "pub trait MyTrait {\n    fn Add10(&mut self);\n}\n\nimpl MyTrait for crate2::MyStruct {\n    fn Add10(&mut self) {\n        self.Q += 10;\n    }\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/traits_in_crates_1/crate1/src/lib.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
