tooling/nargo_cli/tests/snapshots/execute__tests__traits_in_crates_2_force_brillig_true_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "17822721653268775790",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "field"
        },
        "visibility": "public"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/71UwU7DMAx9oa0gTMAEZ7jAiVPGCtuxB/Yh0aZ+Rz99i2ZvrptctmRPqpzI6fOzHcfgCENfQE32DlPwmY6suw6LjFyupE5TSOdJqFwbpAv/TdZi3KTgrzImbCOacvGvXftnI/ll1L+0grMA/w/z12X43T3x/A9jfqi4TxgPr/yHfXKQN+R7ID+vn2ltFV+JvktNuev2FtHPsWaU64eqXSXqYxIWGNefwdxzTHtkblDTA1rOo8YU7GtUbCD+zlRqL3WH2n0JXn2O8ZLIF5F9g3S/GnX2nWzp2XsVvFCxZji/vfWQP/5q7RzHrYZzHXRfZPxGnf+k/WMij+5Cnf3KL/ql7/2v3+3ardd1CkjNGt8JOfd6PmSO3YUaFbzMGyK2fn8C5pjeRdn3PYppcdotCQAA",
  "debug_symbols": "ldPbCoQgEAbgd5lrLzysu9WrLEtYWQiiYbawRO++GnuI6GZuxBG/GRj4F+h0Mw+1cb2foLovYH2rovEuVctKoAnGWjPU+2eg+WDF9n8alcvlFFWIUDEqCGjXpRujyffGaqgkXR8EWIkVnKIFQwuOFgItLmghTwWXXyHEUVzR4oYWBVYI9AxxPoP9dsXlX/BNlFhxoTixpuqpglGN1Z9g9LNrdzmJr1EfIjMG3+puDjqHZ5ebPFtQImRqm1q/AQ==",
  "file_map": {
    "50": {
      "source": "use crate1::MyTrait;\n\nfn main(x: Field, y: pub Field) {\n    let mut V = crate2::MyStruct { Q: x };\n    V.Add10();\n    assert(V.Q == y);\n}\n",
      "path": ""
    },
    "52": {
      "source": "pub struct MyStruct {\n    pub Q: Field,\n}\n\nimpl crate1::MyTrait for MyStruct {\n    fn Add10(&mut self) {\n        self.Q += 10;\n    }\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
