tooling/nargo_cli/tests/snapshots/execute__tests__traits_in_crates_2_force_brillig_true_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "17822721653268775790",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "field"
        },
        "visibility": "public"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/7VUwQ6CMAztZEQn0YNGL/oRQ1A4etAPWSR8B59uiJ2UMk50TUhLWl5fXzcU/Ezh05tGv4Kp+ZonervMckEsG5OnisTzT5TGCuaFv6I3MF5Sn08EBzYBTlL4tS0fJjCfIP/CEMwI+DePr+Pg2zXivLoxPrC+OxhfXvqNz9GL/MbcBvM+3mNsGF6MvVNO0rodA/x9rwxnPbNZE6KPEA/H9wQzuoZyKUzP1orlfO1pZhZpXQ8El/PPYPgf6U6+f1Vb6/sm3aAD1Q9Y/5TVX/B9G5hDL+DZVi5vC9e6u2ua8uO4Tr3R8/cFCaTsDnEHAAA=",
  "debug_symbols": "tZHNCoMwEITfZc85JJHU1lcpRaKuEgiJxFgo4rt3U/oT2l48eFl2lvlmD7NAh8081Mb1foLqvID1rY7GO1LLyqAJxloz1PkZeBpCPfzTqF2SU9QhQiV4wQBdR5vgxPfGIlSK1l+reFul+ljlemEgDnuGl3/DpXoRRZGHJ+K4mThtJSTfRqykrjoY3Vh8ltXPrs26i7cRv2ocg2+xmwOmQrMu028pmSwplqLv",
  "file_map": {
    "50": {
      "source": "use crate1::MyTrait;\n\nfn main(x: Field, y: pub Field) {\n    let mut V = crate2::MyStruct { Q: x };\n    V.Add10();\n    assert(V.Q == y);\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/traits_in_crates_2/src/main.nr"
    },
    "52": {
      "source": "pub struct MyStruct {\n    pub Q: Field,\n}\n\nimpl crate1::MyTrait for MyStruct {\n    fn Add10(&mut self) {\n        self.Q += 10;\n    }\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/traits_in_crates_2/crate2/src/lib.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
